# prod-lines

./: Cargo.toml  foo.json  production.json
src/: input_file.rs  lib.rs  main.rs  production.rs  recipe.rs  recipie.rs  ressource.rs  target.rs
src/cli/: main.rs
src/gui/: main.rs
